# xpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  README.md  conan-release.profile  conanfile.py  conanfile.txt
config/: config.yaml  init_db.sql
docs/: API_REFERENCE.md  BUILD_GUIDE.md  COMPLETION_REPORT.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  MEMORY_CACHE_API.md  MIGRATION_SUMMARY.md  NEXT_STEPS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README_IMPLEMENTATION.md  SQLITE3_MIGRATION.md  TESTING.md  TEST_INFRASTRUCTURE.md  redis_alternatives.md
include/xpp/core/: config_manager.hpp  event_bus.hpp  ioc_container.hpp  logger.hpp
include/xpp/infrastructure/: database_pool.hpp  memory_cache.hpp  redis_client.hpp
include/xpp/modules/message/: message_controller.hpp  message_model.hpp  message_service.hpp
include/xpp/modules/user/: auth_service.hpp  auth_service_sqlite.hpp  user_model.hpp
include/xpp/network/: http_server.hpp
src/: main.cpp  test_simple.cpp
src/modules/user/: auth_controller.hpp  auth_service.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  api_tests.cpp  test_auth_service.cpp  test_database_pool.cpp  test_logger.cpp  test_memory_cache.cpp  test_message_service.cpp
